--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,12 +46,13 @@ jobs:
           name: Install expect command
           command: sudo apt-get install expect
       - run:
-          name: Inspect working directory
-          command: ls -a
-      - run:
-          name: Deploy Over SSH
+          name: Deploy templates
           command: |
-            expect -c 'spawn scp readme.md $::env(SSH_USER)@$::env(SSH_HOST):.; expect "assword:"; send "$::env(PASSWORD)\r"; interact'
+            expect -c 'spawn scp -r /templates $::env(SSH_USER)@$::env(SSH_HOST):.; expect "assword:"; send "$::env(PASSWORD)\r"; interact'
+      - run:
+          name: Deploy assets
+          command: |
+            expect -c 'spawn scp -r /web/includes $::env(SSH_USER)@$::env(SSH_HOST):.; expect "assword:"; send "$::env(PASSWORD)\r"; interact'
 
 workflows:
   version: 2
