--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,9 @@ jobs:
       - checkout
 
       - run:
+          name: Npm install
+          command: npm install
+      - run:
           name: Run build
           command: npm run build
       - run:
