circleci: setup rysnc deployments

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,12 @@ jobs:
           name: Install expect command
           command: sudo apt-get install expect
       - run:
+          name: Install rsync command
+          command: sudo apt-get install rsync grsync
+      - run:
           name: Deploy templates
           command: |
-            expect -c 'spawn scp -r templates $::env(SSH_USER)@$::env(SSH_HOST):.; expect "assword:"; send "$::env(PASSWORD)\r"; interact'
+            expect -c 'spawn rsync -r /templates/. $::env(SSH_USER)@$::env(SSH_HOST):.; expect "assword:"; send "$::env(PASSWORD)\r"; interact'
       - run:
           name: Deploy assets
           command: |
