--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.4.4",
     "autoprefixer": "^6.7.7",
     "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "cssnano": "^3.5.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -29,7 +30,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "scripts": {
     "build": "webpack --env.NODE_ENV=production",
