--- a/web/.htaccess
+++ b/web/.htaccess
@@ -14,7 +14,7 @@ php_value max_input_vars 2000
 <FilesMatch "\.(js|css|jpg|gif|png|pdf|swf|svg|svgz|ico|ttf|ttc|otf|eot|woff|woff2|webp)$">
  <IfModule mod_headers.c>
     ExpiresActive On
-    ExpiresDefault  "access plus 1 month"
+    ExpiresDefault  "access plus 1 year"
     Header set Cache-Control "public, immutable, max-age=31536000, s-maxage=31536000"
     Header set Access-Control-Allow-Origin "*"
  </IfModule>
