webpack: hashed assets

--- a/web/includes/manifest.json
+++ b/web/includes/manifest.json
@@ -1,4 +1,4 @@
 {
-  "bundle.js": "/web/includes/jsjs/bundle.0a8d6358cb63311c474e.js",
-  "bundle.css": "/web/includes/jscss/style.css"
+  "bundle.css": "includes/css/style.c389621142b342baf443.css",
+  "bundle.js": "includes/js/bundle.7d129732aaf74cb000ae.js"
 }
