--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "aelvan/imager": "v2.1.10",
+    "clubstudioltd/craft-asset-rev": "6.0.2",
     "craftcms/cms": "3.1.26",
     "craftcms/redactor": "2.3.3.2",
     "dolphiq/sitemap": "1.0.9",
