--- a/config/project.yaml
+++ b/config/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1557488648
+dateModified: 1557908812
 email:
   fromEmail: bo@cobiro.com
   fromName: Cobiro
@@ -2695,6 +2695,10 @@ plugins:
     edition: standard
     enabled: true
     schemaVersion: 2.0.0
+  assetrev:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.0
 sections:
   aebcc222-f778-4b0b-8456-c203042d4448:
     name: Pages
