--- a/web/.htaccess
+++ b/web/.htaccess
@@ -15,7 +15,7 @@ php_value max_input_vars 2000
  <IfModule mod_headers.c>
     ExpiresActive On
     ExpiresDefault  "access plus 1 year"
-    Header set Cache-Control "public, immutable, max-age=31536000, s-maxage=31536000"
+    Header set Cache-Control "max-age=31536000, public"
     Header set Access-Control-Allow-Origin "*"
  </IfModule>
 </FilesMatch>
